tests/resources/invalid/malformedCommentStart.ebnf
(* I'm a normal (* comment!*) *)

( I lost my starting * :( *)

